feat(xlsx): 添加Excel导出工具类并重构导出功能
- 新增KitXlsxExportDataTransferRowHandler接口用于数据转换
- 新增KitXlsxExportUtil工具类提供统一的Excel导出功能
- 添加多个ExportRowVo类用于导出数据映射
- 重构部门、字典、岗位、菜单等模块的导出功能使用新工具类
- 添加SystemYesOrNoChConst和SystemZhConst常量接口
- 标记KitFileUtil.downloadExcel方法为废弃
- 优化文件名验证逻辑和字符串类型判断